# lambda-benchmark

lambda-benchmark-base/: Application.hs  Foundation.hs  Model.hs  README.md  Roles.hs  Settings.hs  lambda-benchmark.cabal
lambda-benchmark-base/Handler/: Employee.hs  Home.hs  Project.hs
lambda-benchmark-base/app/: devel.hs
lambda-benchmark-base/config/: dump.sql  keter.yml  models  routes  settings.yml  test-settings.yml
lambda-benchmark-base/config/upstart/: lambda-benchmark.conf
lambda-benchmark-base/config/vhost/nginx/: lambda-benchmark
lambda-benchmark-base/results/: results_1.txt  results_2.txt  results_3.txt  results_4.txt  results_5.txt
lambda-benchmark-base/test/: TestImport.hs
lambda-benchmark-base/test/Handler/: HomeSpec.hs
lambda-benchmark-employee/: README.md  lambdabenchmark-employee.cabal
lambda-benchmark-employee/LambdaBenchmark/: Employee.hs
lambda-benchmark-employee/LambdaBenchmark/Employee/: Foundation.hs  Import.hs  Message.hs  Models.hs
lambda-benchmark-employee/LambdaBenchmark/Employee/Handler/: Employee.hs
lambda-benchmark-employee/config/: models  routes
lambda-benchmark-employee/templates/: edit.hamlet  index.hamlet  new.hamlet
lambda-benchmark-project/: README.md  lambdabenchmark-project.cabal
lambda-benchmark-project/LambdaBenchmark/: Project.hs
lambda-benchmark-project/LambdaBenchmark/Project/: Foundation.hs  Import.hs  Message.hs  Models.hs
lambda-benchmark-project/LambdaBenchmark/Project/Handler/: Project.hs
lambda-benchmark-project/config/: models  routes
lambda-benchmark-project/templates/: edit.hamlet  index.hamlet  new.hamlet
