name:               lambdabenchmark-project
version:            0.0.0
license:            MIT
license-file:       LICENSE
author:
maintainer:
copyright:          (c) 2015
bug-reports:
homepage:
synopsis:           LambdaBenchmark Project
description:        Content Management System (CMS) Project Extension
stability:          alpha
category:           web
build-type:         Simple
cabal-version:      >= 1.18
tested-with:        GHC >= 7.6
extra-source-files: README.md
                  , templates/*
                  , config/*

source-repository head
  type:             git
  location:

library
  default-language: Haskell2010

  exposed-modules:  LambdaBenchmark.Project
                  , LambdaBenchmark.Project.Message

  other-modules:    LambdaBenchmark.Project.Foundation
                  , LambdaBenchmark.Project.Models
                  , LambdaBenchmark.Project.Import
                  , LambdaBenchmark.Project.Handler.Project

  build-depends:    base
                  , yesod
                  , yesod-form
                  , lambdacms-core
                  , persistent
                  , text
                  , time
                  , shakespeare

  ghc-options:      -Wall -O2
